Tue Mar 26 23:27:24 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-keybinding-properties.c (setup_dialog): Only show themes
	if they actually have a keybinding.  Also, initialize the keytheme
	correctly.

2002-03-26  Seth Nickell  <snickell@stanford.edu>

	* keybinding.desktop.in:

	Use "keyboard shortcuts" to match the window title